tests/diagnostics/statements/assignments/constant_assignment/expect.txt
# exit: 1
input/main.lang0:4:5: error: cannot assign to constant 'ANSWER'
      ANSWER = 2
      ^
